# rag_test_1

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_metrics.json
docstore/: 00433daf-0bfe-4063-8322-9017ddec78cb  01175df8-543a-4f74-8d38-4d4d564d68fe  019f534c-deee-461f-92af-a61e82562aa7  01fe4aa5-efee-4ddf-9c8b-bb19b81b197a  03336127-3616-4470-a669-a807ba3297a6  0611c0a5-9152-4cad-83b0-8b325ed6fb37  07b8a679-6c7c-41b0-8a6e-67868f15fc2b  07ef4b8a-1b2c-42a3-b148-5d8883e3a5f9  08560b02-21fa-4e80-94bb-bd8d4b9599ba  08b91c4f-c721-417c-a740-6f8f9a533557  09f1b770-2260-4f93-897a-ee0c17894ac6  0af23778-b603-4df9-808d-97ea964b875c  0b194021-6869-4427-87ec-a163b706ae1f  0ce51b9b-ce86-4408-abfe-889e1168ff72  0d23773c-cc8b-4157-ba8e-bdbc593d63a8  0dc5c5e1-0cd9-4ca2-bee0-9142f5c40afb  105203db-3908-4876-86d4-fc6afeebbbb8  11bdcbc5-c883-441c-8fa9-afe98ff36cb8  14e6bd98-8238-4ad0-a410-69984f0d1a81  19112394-5fe6-4100-96ae-bacf7cb0d97b  1a5ac60e-093f-45e1-b210-8f6ee05373c4  1aeafed4-41cd-431b-a384-147db4db7985  1ed75fa4-aff0-4e96-bcfd-0a899302a77b  214b72e6-4bdb-45b8-8808-6848abb2bcc9  21b86f55-29dd-4a5a-a77d-2aefc58fde9a  21facc3f-7bf3-498f-9ef7-e9e07d41689b  2210b671-7f24-4908-be5c-2f8da14942bf  231ded47-fb6e-44c6-ae61-3b005324ef1c  2485e660-7334-42c7-b1f3-140dc583fb09  24ed6a81-ce05-4db1-93a4-a4b301f22d62  2596826e-6420-4d28-b4b2-23b4c3a04474  2609afbd-731c-48d6-9559-fed8b65ba301  275fa058-444c-4be9-a4a1-cba19bb0aebb  277d67c5-5e94-48cf-b2d0-900782b8e2e7  291f0c71-444b-47bc-ac14-7a98a1ca86be  29366cf2-f0b0-4dd5-9204-dd5b87167134  (+194 more)
tests/: test_app.py  (+3 more)
(+4 files in other folders)
